@@ -1,3 +1,6 @@
+August 31, 2009 (ntrel)
+  Print support library path if Geany is in debug mode.
+
 August 28, 2009 (ntrel)
   Upgrade to API 153 except for plugin_key_group change (TODO). This
   removes the "make" tool field, "exec" project field, "BUILD_RUN2"
